# alien_scanner

./: .clang-format  .env  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
cmake/: ColconBuildTargets.cmake
docs/: ament-cmake-conventions.md  clion-cpp-cmake.md  frontier-geometry-demo.md  xenomorph-scanner-plan.md
docs/bags/frontier-geometry-demo-support-envelope-v1/: README.md  frontier-geometry-demo-support-envelope-v1_0.mcap  metadata.yaml
docs/bags/frontier-geometry-demo-support-evidence-ray-v2/: README.md  frontier-geometry-demo-support-evidence-ray-v2_0.mcap  metadata.yaml
docs/decisions/: frontier-geometry-demo-qa.md  phase-03-swarm-qa.md
docs/phases/: phase-01-cave-world.md  phase-02-drone-scanner.md  phase-03-swarm.md
scripts/: colcon-build.sh  colcon-test.sh  ros2-up.ps1  start-vcxsrv.ps1  update-ros2-clion-env.sh
ws/src/cave_world/: CMakeLists.txt  package.xml
ws/src/cave_world/config/: cave_world.rviz
ws/src/cave_world/include/cave_world/: CaveFieldFactory.hpp  CavePublisherNode.hpp  ICaveField.hpp  ProceduralCaveField.hpp  TreeCaveField.hpp  TruthCollisionAuditor.hpp
ws/src/cave_world/launch/: cave_publisher_launch.py  cave_world_launch.py
ws/src/cave_world/src/: CaveFieldFactory.cpp  CavePublisherMain.cpp  CavePublisherNode.cpp  ProceduralCaveField.cpp  TreeCaveField.cpp  TruthCollisionAuditor.cpp
ws/src/cave_world/test/: TestProceduralCaveField.cpp  TestTreeCaveField.cpp  TestTruthCollisionAuditor.cpp  test_cave_publisher_integration.py
ws/src/drone_scanner/: CMakeLists.txt  package.xml
ws/src/drone_scanner/config/: drone_map.rviz  drone_sim.rviz
ws/src/drone_scanner/include/drone_scanner/: AltitudeAdapter.hpp  CaveFieldFromParameters.hpp  FakeLidar.hpp  FakeLidarNode.hpp  FakeOdomNode.hpp  ITrajectory.hpp  LineTrajectory.hpp  Point3f.hpp  PointCloudAccumulator.hpp  Pose3D.hpp  PoseSegmentTrajectory.hpp  RigidTransform.hpp  ScanAccumulatorNode.hpp
ws/src/drone_scanner/launch/: drone_sensing_stack.launch.py  fake_lidar_launch.py  fake_odom_launch.py
ws/src/drone_scanner/src/: AltitudeAdapter.cpp  CaveFieldFromParameters.cpp  FakeLidar.cpp  FakeLidarMain.cpp  FakeLidarNode.cpp  FakeOdomMain.cpp  FakeOdomNode.cpp  LineTrajectory.cpp  PointCloudAccumulator.cpp  PoseSegmentTrajectory.cpp  RigidTransform.cpp  ScanAccumulatorMain.cpp  ScanAccumulatorNode.cpp  TruthCollisionAuditNode.cpp
ws/src/drone_scanner/test/: TestAltitudeAdapter.cpp  TestFakeLidar.cpp  TestLineTrajectory.cpp  TestPointCloudAccumulator.cpp  TestPoseSegmentTrajectory.cpp  test_cloud_map_integration.py  test_fake_lidar_integration.py  test_fake_odom_goal_integration.py  test_fake_odom_integration.py  test_stop_scan_integration.py
ws/src/swarm_controller/: CMakeLists.txt  package.xml
ws/src/swarm_controller/config/: exploration.rviz  frontier_component_audit_frame3_components.csv  frontier_component_audit_frame3_membership.csv  frontier_geometry_demo.rviz  octomap_map.rviz  swarm_exploration.rviz  swarm_sensing.rviz
ws/src/swarm_controller/include/swarm_controller/: ExplorationDiagnostics.hpp  ExplorationTask.hpp  FrontierComponentAuditReplay.hpp  FrontierExplorationStrategy.hpp  FrontierGeometryDemo.hpp  GlobalFrontierDetector.hpp  GlobalTaskAllocator.hpp  IExplorationStrategy.hpp  KnownFreePathChecker.hpp  LatestSnapshotSlot.hpp  MapMergeDiagnostics.hpp  MapPipelineTiming.hpp  OctoMapBuilder.hpp  OctoMapBuilderNode.hpp  OctoMapMerger.hpp  PeerStateTracker.hpp  PlanningSnapshotGuard.hpp  Point3f.hpp  Pose3D.hpp  RayReturn.hpp  SingleDroneExplorer.hpp  SingleDroneExplorerNode.hpp  TaskLeaseTracker.hpp
ws/src/swarm_controller/launch/: frontier_geometry_demo.launch.py  multi_drone_exploration.launch.py  multi_drone_sensing.launch.py  octomap_builder_launch.py  single_drone_exploration.launch.py
ws/src/swarm_controller/src/: FrontierComponentAuditReplay.cpp  FrontierComponentAuditReplayNode.cpp  FrontierExplorationStrategy.cpp  FrontierGeometryDemo.cpp  FrontierGeometryDemoNode.cpp  GlobalFrontierDetector.cpp  GlobalMapMergerNode.cpp  GlobalTaskAllocator.cpp  GlobalTaskAllocatorNode.cpp  KnownFreePathChecker.cpp  OctoMapBuilder.cpp  OctoMapBuilderMain.cpp  OctoMapBuilderNode.cpp  OctoMapMerger.cpp  PeerStateTracker.cpp  PlanningSnapshotGuard.cpp  SingleDroneExplorer.cpp  SingleDroneExplorerMain.cpp  SingleDroneExplorerNode.cpp  TaskLeaseTracker.cpp
ws/src/swarm_controller/test/: GlobalFrontierBagAnalyzer.cpp  GlobalFrontierBagAnalyzer.hpp  GlobalFrontierBagAnalyzerMain.cpp  GlobalMapLateSubscriberProbe.cpp  GlobalTaskAllocatorIntegrationProbe.cpp  TestFrontierComponentAuditReplay.cpp  TestFrontierExplorationStrategy.cpp  TestFrontierGeometryDemo.cpp  TestGlobalFrontierBagAnalyzer.cpp  TestGlobalFrontierDetector.cpp  TestGlobalTaskAllocator.cpp  TestKnownFreePathChecker.cpp  TestLatestSnapshotSlot.cpp  TestMapMergeDiagnostics.cpp  TestMapPipelineTiming.cpp  TestOctoMapBuilder.cpp  TestOctoMapMerger.cpp  TestPeerStateTracker.cpp  TestPlanningSnapshotGuard.cpp  TestSingleDroneExplorer.cpp  TestTaskLeaseTracker.cpp  TestYawSweepCoverage.cpp  test_frontier_geometry_demo_integration.py  test_global_map_merger_integration.py  test_global_task_allocator_clock_reset.py  test_global_task_allocator_integration.py  test_global_task_allocator_pipeline.py  test_global_task_allocator_pipeline_load.py  test_global_task_allocator_stale_replay.py  test_multi_drone_exploration_integration.py  test_multi_drone_sensing_integration.py  test_octomap_builder_integration.py  test_octomap_observation_stamp_integration.py  test_single_drone_exploration_integration.py  test_single_peer_wiring_integration.py
ws/src/swarm_controller_interfaces/: CMakeLists.txt  package.xml
ws/src/swarm_controller_interfaces/msg/: ExplorationTask.msg
